[tool.poetry]
name = "json-parser-pie"
version = "0.1.0"
description = ""
authors = ["boswellgathu <boswellgathu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
